--- a/themes/bbs/sass/overrides.scss
+++ b/themes/bbs/sass/overrides.scss
@@ -21,7 +21,6 @@ h4,
 h5,
 h6 {
   font-family: 'Cooper Hewitt', sans-serif;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 ul {
